--- a/client/package.json
+++ b/client/package.json
@@ -9,10 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react-dom": "^19.2.4",
+    "lucide-react": "^0.563.0",
     "react": "^19.2.4",
-    "@google/genai": "^1.39.0",
-    "lucide-react": "^0.563.0"
+    "react-dom": "^19.2.4",
+    "react-router-dom": "^7.13.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
